--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <link rel="stylesheet" href="./styles.css">
         </head>
     <body>
+        <h1>Le déploiement</h1>
+        <p>C'est quand même pas facile ce déploiement !!</p>
+        
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>  
