--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <p>C'est quand même pas facile ce déploiement !!</p>
         <p>Merci mon ptit Kiwi de ton aide !</p>
         <p>J' ai réussi une première fois, voyons si j'y arrive une deuxième !</p>
-        <p>> je suis cené avoir compris></p>
-        
+        <p> je suis censé avoir compris</p>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>  
